argocd-agent/gittea/gittea1.yml
apiVersion: v1
kind: Namespace
metadata:
  name: git1
spec: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: git1
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: gitea/gitea:latest-rootless
        ports:
        - containerPort: 3000
          name: http
        - containerPort: 2222
          name: ssh
        volumeMounts:
        # PRIMO MOUNT: I dati dei repo
        - name: data
          mountPath: /var/lib/gitea
          subPath: data
        # SECONDO MOUNT: La configurazione (Risolve l'errore /etc/gitea)
        - name: data
          mountPath: /etc/gitea
          subPath: config
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: gitea-data
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: git1
  labels:
    app: gitea
spec:
  ports:
  - port: 3000
    targetPort: 3000
    name: http
  - port: 22
    targetPort: 2222 # Il servizio ascolta sulla 22 ma gira il traffico alla 2222 del container
    name: ssh
  selector:
    app: gitea
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitea
  namespace: git1
spec:
  to:
    kind: Service
    name: gitea
  port:
    targetPort: http
  tls:
    termination: edge
